fixed text wrap bug, added screenshots for README

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,8 +28,8 @@ body {
   }
 
 main {
-  width: 550px;
-  height: 1500px;
+  width: 500px;
+  height: 100%;
   border-radius: 10px;
   padding: 2em;
   background-color: #ffffff;
